@@ -6,7 +6,7 @@ Uploaders: Laurent Bigonville <bigon@debian.org>,
            Simon McVittie <smcv@debian.org>,
            Jonny Lamb <jonny@debian.org>
 Build-Depends: cdbs,
-               debhelper (>= 5),
+               debhelper (>= 9),
                pkg-config (>= 0.9.0),
                python (>= 2.5),
                libpurple-dev (>= 2.7.0),
