@@ -1,14 +1,25 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
 
-include /usr/share/cdbs/1/class/autotools.mk
-include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/dpkg/default.mk
 
-# List any files which are not installed
-include /usr/share/cdbs/1/rules/utils.mk
-common-binary-post-install-arch:: list-missing
+%:
+	dh $@ --parallel
 
-# all CMs in Debian share a directory, to keep libexec tidy
-DEB_CONFIGURE_LIBEXECDIR := "\$${prefix}/lib/telepathy"
+# Now that we use debhelper 9, dh_auto_configure defaults to
+# $libexecdir=$libdir, which might be better than this, but doesn't match
+# our historical practice (so it'd break old debugging instructions).
+# Leaving it as it was for now...
+override_dh_auto_configure:
+	dh_auto_configure -- \
+		--libexecdir="\$${prefix}/lib/telepathy" \
+		$(NULL)
 
-include $(CURDIR)/debian/update-patches.mk
+# the regression tests are too race-prone to run on Debian buildds
+override_dh_auto_test:
+	:
+
+override_dh_install:
+	dh_install --list-missing
+
+#override_dh_strip:
+#	dh_strip --dbg-package=telepathy-haze-dbg
